fix: Increase spacing between projects

--- a/main.css
+++ b/main.css
@@ -106,7 +106,7 @@ main h2 {
 
 /* ##### Project ##### */
 .project {
-  margin-bottom: 10%;
+  margin-bottom: 20%;
 }
 
 .project .container {
